@@ -1064,7 +1064,7 @@ namespace OpenRCT2
         STR_ENABLE_LIGHTING_VEHICLES = 6361,
         STR_ENABLE_LIGHTING_VEHICLES_TIP = 6362,
         STR_ENLARGED_UI = 6638,
-        STR_ENLARGED_UI_TIP = 6639,
+        STR_ENLARGED_UI_TIP = 6645,
         STR_FAHRENHEIT = 2367,
         STR_FINANCES_BUTTON_ON_TOOLBAR = 5120,
         STR_FINANCES_BUTTON_ON_TOOLBAR_TIP = 5838,
@@ -1177,6 +1177,8 @@ namespace OpenRCT2
         STR_TITLE_SEQUENCE_RANDOM = 5310,
         STR_TITLE_SEQUENCE_TIP = 5847,
         STR_TOOLBAR_BUTTONS_GROUP = 5479,
+        STR_TOUCH_ENHANCEMENTS = 6644,
+        STR_TOUCH_ENHANCEMENTS_TIP = 6639,
         STR_TRANSPARENT_SCREENSHOT = 6327,
         STR_TRANSPARENT_SCREENSHOT_TIP = 6328,
         STR_TRAP_MOUSE = 5582,
